# toy_kafka_payment_system

./: Cargo.toml  compose.yml
consumer/: Cargo.toml
consumer/src/: lib.rs  main.rs
entity/: Cargo.toml
entity/src/: lib.rs  payment_transactions.rs  prelude.rs  wallets.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240330_000001_create_tables.rs
producer/: Cargo.toml
producer/src/: lib.rs
src/: main.rs
src/handlers/: mod.rs
