[package]
name = "kwallet"
version = "0.1.0"
edition = "2021"
authors = ["k0i"]
description = "A short description of my package"
documentation = "https://example.com/"

[dependencies]
producer = { path = "producer" }
consumer = { path = "consumer" }
entity = { path = "entity" }
migration = { path = "migration" }
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
# tracing
tracing.workspace = true
tracing-bunyan-formatter.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
# kafka
rdkafka.workspace = true

actix-web = "4.5.1"

sea-orm = { version = "^0.12.0", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }

[workspace]
members = [".", "producer", "migration", "consumer"]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["k0i"]
description = "A short description of my package"
documentation = "https://example.com/"

[workspace.dependencies]
anyhow = "1.0.81"
tokio = { version = "1.36.0", features = ["full"] }
producer = { path = "producer" }
log = "0.4.21"
env_logger = "0.11.3"
tracing = {version = "0.1.40", features = ["log"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.18", features = ["registry", "env-filter", "ansi"] }
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
uuid = { verson = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
