[package]
name = "consumer"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
rdkafka.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
tokio.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
